log
Wed 27 Mar 2024 05:42:29 PM UTC: 
 tests:  0|6
total_score: 0/70
d2df628
Wed 27 Mar 2024 05:50:05 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
54ae50d
Wed 27 Mar 2024 05:54:56 PM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
f7842b9
Wed 27 Mar 2024 05:55:23 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b7d1d25
Wed 27 Mar 2024 05:55:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:10: error: ‘newNode’ undeclared (first use in this function); did you mean ‘Node’?
   49 |   return newNode;
      |          ^~~~~~~
      |          Node
list.c:49:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
24f57c6
Wed 27 Mar 2024 05:56:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
dc7b2d2
Wed 27 Mar 2024 05:59:11 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a4f1962
Wed 27 Mar 2024 05:59:23 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
16847c0
Wed 27 Mar 2024 05:59:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
695d3eb
